Adapt Sphinx documentation to new sky model output format
In the new sky model output format all instrument scaling factors are shown as regular model parameters.

--- a/doc/source/users/tutorials/hess_dr1/classical.ipynb
+++ b/doc/source/users/tutorials/hess_dr1/classical.ipynb
@@ -190,7 +190,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Dummy\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -203,7 +202,8 @@
       "  Index ....................: -2 +/- 0 [10,-10]  (free,scale=-2,gradient)\n",
       "  PivotEnergy ..............: 1000000 MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
-      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n"
+      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n"
      ]
     }
    ],
@@ -277,7 +277,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -290,7 +289,8 @@
       "  Index ....................: -2.63298373450669 +/- 0.0795120102122515 [10,-10]  (free,scale=-2,gradient)\n",
       "  PivotEnergy ..............: 1000000 MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
-      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n"
+      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n"
      ]
     }
    ],
@@ -428,7 +428,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -442,10 +441,10 @@
       "  PivotEnergy ..............: 1000000 [10000,1000000000] MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n",
       "=== GCTAModelBackground ===\n",
       " Name ......................: Background_023523\n",
       " Instruments ...............: HESSOnOff\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 023523\n",
       " Model type ................: CTABackground\n",
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
@@ -476,7 +475,6 @@
       "=== GCTAModelBackground ===\n",
       " Name ......................: Background_023526\n",
       " Instruments ...............: HESSOnOff\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 023526\n",
       " Model type ................: CTABackground\n",
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
@@ -507,7 +505,6 @@
       "=== GCTAModelBackground ===\n",
       " Name ......................: Background_023559\n",
       " Instruments ...............: HESSOnOff\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 023559\n",
       " Model type ................: CTABackground\n",
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
@@ -538,7 +535,6 @@
       "=== GCTAModelBackground ===\n",
       " Name ......................: Background_023592\n",
       " Instruments ...............: HESSOnOff\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 023592\n",
       " Model type ................: CTABackground\n",
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
