--- a/doc/source/users/tutorials/hess_dr1/skymap.ipynb
+++ b/doc/source/users/tutorials/hess_dr1/skymap.ipynb
@@ -172,7 +172,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Src001\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -185,7 +184,8 @@
       "  Index ....................: -2.48 +/- 0 [10,-10]  (free,scale=-2.48,gradient)\n",
       "  PivotEnergy ..............: 300000 MeV (fixed,scale=300000,gradient)\n",
       " Number of temporal par's ..: 1\n",
-      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n"
+      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n"
      ]
     }
    ],
