--- a/doc/source/users/tutorials/hess_dr1/unbinned.ipynb
+++ b/doc/source/users/tutorials/hess_dr1/unbinned.ipynb
@@ -95,7 +95,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Src001\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -109,10 +108,10 @@
       "  PivotEnergy ..............: 300000 MeV (fixed,scale=300000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n",
       "=== GCTAModelBackground ===\n",
       " Name ......................: Background_023523\n",
       " Instruments ...............: HESS\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 023523\n",
       " Model type ................: CTABackground\n",
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
@@ -143,7 +142,6 @@
       "=== GCTAModelBackground ===\n",
       " Name ......................: Background_023526\n",
       " Instruments ...............: HESS\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 023526\n",
       " Model type ................: CTABackground\n",
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
@@ -174,7 +172,6 @@
       "=== GCTAModelBackground ===\n",
       " Name ......................: Background_023559\n",
       " Instruments ...............: HESS\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 023559\n",
       " Model type ................: CTABackground\n",
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
@@ -205,7 +202,6 @@
       "=== GCTAModelBackground ===\n",
       " Name ......................: Background_023592\n",
       " Instruments ...............: HESS\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 023592\n",
       " Model type ................: CTABackground\n",
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
@@ -330,7 +326,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -343,7 +338,8 @@
       "  Index ....................: -2.68230589724908 +/- 0.0650730512302727 [10,-10]  (free,scale=-2.48,gradient)\n",
       "  PivotEnergy ..............: 999999.999999999 MeV (fixed,scale=300000,gradient)\n",
       " Number of temporal par's ..: 1\n",
-      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n"
+      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n"
      ]
     }
    ],
@@ -396,7 +392,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -409,7 +404,8 @@
       "  Index ....................: -2.66140151299329 +/- 0.0671763204868478 [10,-10]  (free,scale=-2.48,gradient)\n",
       "  PivotEnergy ..............: 999999.999999999 MeV (fixed,scale=300000,gradient)\n",
       " Number of temporal par's ..: 1\n",
-      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n"
+      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n"
      ]
     }
    ],
