--- a/doc/source/users/tutorials/howto/howto_advanced_python_fitting.ipynb
+++ b/doc/source/users/tutorials/howto/howto_advanced_python_fitting.ipynb
@@ -246,7 +246,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -260,10 +259,10 @@
       "  PivotEnergy ..............: 300000 [10000,1000000000] MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n",
       "=== GCTAModelIrfBackground ===\n",
       " Name ......................: CTABackgroundModel\n",
       " Instruments ...............: CTA\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: \"PowerLaw\" * \"Constant\"\n",
       " Number of parameters ......: 4\n",
@@ -670,7 +669,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"ExponentialCutoffPowerLaw\" * \"Constant\"\n",
@@ -684,7 +682,8 @@
       "  CutoffEnergy .............: 3206993.95272881 +/- 117129.972166476 [0.1,infty[ MeV (free,scale=1,gradient)\n",
       "  PivotEnergy ..............: 300000 MeV (fixed,scale=1,gradient)\n",
       " Number of temporal par's ..: 1\n",
-      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n"
+      "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n"
      ]
     }
    ],
