--- a/doc/source/users/tutorials/quickstart/ctools-from-python.ipynb
+++ b/doc/source/users/tutorials/quickstart/ctools-from-python.ipynb
@@ -483,7 +483,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -497,10 +496,10 @@
       "  PivotEnergy ..............: 300000 [10000,1000000000] MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n",
       "=== GCTAModelIrfBackground ===\n",
       " Name ......................: CTABackgroundModel\n",
       " Instruments ...............: CTA\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: \"PowerLaw\" * \"Constant\"\n",
       " Number of parameters ......: 4\n",
@@ -564,7 +563,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -578,10 +576,10 @@
       "  PivotEnergy ..............: 300000 [10000,1000000000] MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n",
       "=== GCTAModelIrfBackground ===\n",
       " Name ......................: CTABackgroundModel\n",
       " Instruments ...............: CTA\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: \"PowerLaw\" * \"Constant\"\n",
       " Number of parameters ......: 4\n",
