--- a/doc/source/users/tutorials/howto/howto_connect_models.ipynb
+++ b/doc/source/users/tutorials/howto/howto_connect_models.ipynb
@@ -272,7 +272,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -286,10 +285,10 @@
       "  PivotEnergy ..............: 300000 [10000,1000000000] MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n",
       "=== GCTAModelIrfBackground ===\n",
       " Name ......................: Background_000001\n",
       " Instruments ...............: CTA\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 000001\n",
       " Model type ................: \"PowerLaw\" * \"Constant\"\n",
       " Number of parameters ......: 4\n",
@@ -302,7 +301,6 @@
       "=== GCTAModelIrfBackground ===\n",
       " Name ......................: Background_000002\n",
       " Instruments ...............: CTA\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: 000002\n",
       " Model type ................: \"PowerLaw\" * \"Constant\"\n",
       " Number of parameters ......: 4\n",
