--- a/doc/source/users/tutorials/howto/howto_stacked_analysis.ipynb
+++ b/doc/source/users/tutorials/howto/howto_stacked_analysis.ipynb
@@ -289,7 +289,6 @@
       "=== GModelSky ===\n",
       " Name ......................: Crab\n",
       " Instruments ...............: all\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: PointSource\n",
       " Model components ..........: \"PointSource\" * \"PowerLaw\" * \"Constant\"\n",
@@ -303,10 +302,10 @@
       "  PivotEnergy ..............: 300000 [10000,1000000000] MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
+      " Number of scale par's .....: 0\n",
       "=== GCTAModelCubeBackground ===\n",
       " Name ......................: BackgroundModel\n",
       " Instruments ...............: CTA, HESS, MAGIC, VERITAS\n",
-      " Instrument scale factors ..: unity\n",
       " Observation identifiers ...: all\n",
       " Model type ................: \"PowerLaw\" * \"Constant\"\n",
       " Number of parameters ......: 4\n",
