--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-06-25
+
+        * Bug fix version 1.6.2 released
+        ================================
+
+        Fix OpenMP issue in ctbin when using energy bounds from file (#2912)
+
+
 2019-06-05
 
         * Bug fix version 1.6.1 released
