--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.7.0
 
-5 June 2019
+10 July 2019
 
 
 Introduction
@@ -116,7 +116,9 @@ None
 
 ctskymap - CTA sky mapping
 --------------------------
-None
+Added ctskymap::fits() method to allow access of FITS file object before
+saving the object to disk. This allows manipulation of ctskymap results without
+writing a FITS file (#2925).
 
 
 cttsmap - Generation of Test Statistic map
@@ -216,7 +218,13 @@ None
 
 csphagen - Generate On/Off observations
 ---------------------------------------
-None
+Setting the exclusion map via csphagen.exclusion_map(object=<map>) will now
+actually use the exclusion map even if the "inexclusion" parameter is not set.
+Before, the only exclusion that would be used was the exclusion passed via the
+"inexclusion" "parameter. If re-running csphagen using the "inexclusion"
+parameter after setting the map with csphagen.exclusion_map() you should first
+call csphagen.exclusion_map(object=gammalib.GSkyRegionMap()). This makes the
+map empty and csphagen then checks the "inexclusion" "parameter (#2925).
 
 
 csphasecrv - Generate phase curve
@@ -311,7 +319,9 @@ None
 
 Examples
 --------
-None
+The example scripts show_butterfly.py, show_spectrum.py, show_residuals.py
+and show_significance_distribution.py can now be run using objects that only
+exist in memory (#2925).
 
 
 caldb
