--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 
         Improve documentation and tutorials (#2962)
         Fix OpenMP issue in ctbin when using energy bounds from file (#2912)
+        Fix multi-instrument handling in csbkgmodel (#2862)
 
 
 2019-06-05
