--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2019-07-10
+2019-07-23
 
         * Version 1.7.0 released
         ========================
 
+        Remove response cache before source testing in cttsmap (#2973)
         Enabling running of example scripts from objects in memory (#2925)
 
 
